--- a/index.html
+++ b/index.html
@@ -17,12 +17,10 @@
 <div class="row text-center">
   <nav class="navbar navbar-default">
     <div class="col-md-2"></div>
-    <div class="col-md-1">
+    <div class="col-md-2">
        <img class="img-responsive" id="logo" src="images/logo.svg">
     </div>
-    <div class="col-md-1">
-      <p>Ίδρυμα <br>Κοινωνικών <br>Ασφαλίσεων</p>
-    </div>
+
     <div class="col-md-4">
       <form class="form-inline top1" action="/action_page.php">
         <div class="form-group" >
@@ -33,13 +31,14 @@
         </button>
       </form>
     </div>
-    <div class="col-md-2 text-center">
+    <div class="col-md-3 text-center">
     <ul class="nav navbar-nav navbar-right top">
-      <li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
-      <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+      <li><a href="#"><span class="glyphicon glyphicon-align-justify"></span>  Περιεχόμενα</a></li>
+      <li><a href="#"><span class="glyphicon glyphicon-user"></span> Εγγραφή</a></li>
+      <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Σύνδεση</a></li>
     </ul>
     </div>
-    <div class="col-md-2"></div>
+    <div class="col-md-1"></div>
   </nav>
 
 </div>
