--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="bootstrap-3.3.7-dist/css/bootstrap.min.css">
   <script src="bootstrap-3.3.7-dist/js/bootstrap.min.js"></script>
   <link rel="stylesheet" href="styles/styles.css">
-
+  <link href="https://fonts.googleapis.com/css?family=Alegreya+Sans:900|Open+Sans:700|Roboto" rel="stylesheet">
 </head>
 <body>
 
@@ -49,23 +49,20 @@
     <div class="row text-center target-groups">
       <div class="col-md-2"></div>
       <div class="col-md-2">
-        <button type="button" class="btn btn-info target-group family"><div style="color:black;opacity:1;!important">Ασφαλισμένοι</div></button>
+        <button type="button" class="btn btn-info target-group family"><div>Ασφαλισμένοι</div></button>
       </div>
       <div class="col-md-2">
-        <button type="button" class="btn btn-info target-group retired"><div style="color:black;opacity:1;!important">Συνταξιούχοι</div></button>
+        <button type="button" class="btn btn-info target-group retired"><div>Συνταξιούχοι</div></button>
       </div>
       <div class="col-md-2">
-        <button type="button" class="btn btn-info target-group employer"><div style="color:black;opacity:1;!important">Εργοδότες</div></button>
+        <div type="button" class="btn btn-info target-group employer"><h3>Εργοδότες</h3></div>
       </div>
       <div class="col-md-2">
-        <button type="button" class="btn btn-info target-group disability"><div style="color:black;opacity:1;!important">A.M.E.A</div></button>
+        <button type="button" class="btn btn-info target-group disability"><div>A.M.E.A</div></button>
       </div>
       <div class="col-md-2"></div>
     </div>
   <!-- End of Target Groups -->
-
-
-
 </div>
 
 </body>
