Added Opacity images

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     </div>
     <div class="col-md-3 text-center">
     <ul class="nav navbar-nav navbar-right top">
-      <li><a href="#"><span class="glyphicon glyphicon-align-justify"></span>  Περιεχόμενα</a></li>
+      <li><a href="#"><span class="glyphicon glyphicon-align-justify"></span> Περιεχόμενα</a></li>
       <li><a href="#"><span class="glyphicon glyphicon-user"></span> Εγγραφή</a></li>
       <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Σύνδεση</a></li>
     </ul>
@@ -49,16 +49,16 @@
     <div class="row text-center target-groups">
       <div class="col-md-2"></div>
       <div class="col-md-2">
-        <button type="button" class="btn btn-info target-group family"><div>Ασφαλισμένοι</div></button>
+        <div type="button" class="btn btn-info target-group family"><h3>Ασφαλισμένοι</h3></div>
       </div>
       <div class="col-md-2">
-        <button type="button" class="btn btn-info target-group retired"><div>Συνταξιούχοι</div></button>
+        <div type="button" class="btn btn-info target-group retired"><h3>Συνταξιούχοι</h3></div>
       </div>
       <div class="col-md-2">
         <div type="button" class="btn btn-info target-group employer"><h3>Εργοδότες</h3></div>
       </div>
       <div class="col-md-2">
-        <button type="button" class="btn btn-info target-group disability"><div>A.M.E.A</div></button>
+        <div type="button" class="btn btn-info target-group disability"><h3>A.M.E.A</h3></div>
       </div>
       <div class="col-md-2"></div>
     </div>
