--- a/index.html
+++ b/index.html
@@ -14,34 +14,39 @@
 <div class="container-fluid">
 
 <!-- Navbar Code -->
-<div class="row text-center">
-  <nav class="navbar navbar-default">
-    <div class="col-md-2"></div>
-    <div class="col-md-2">
-       <img class="img-responsive" id="logo" src="images/logo.svg">
+<!-- Static navbar -->
+<nav class="navbar navbar-default">
+  <div class="container">
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+              <span class="sr-only">Toggle navigation</span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+            </button>
+  <a class="navbar-brand" href="#">
+    <img src="/eam/images/logo.svg" width="80" height="80" class="d-inline-block align-top" alt="">
+  </a>
+      <a class="navbar-brand" href="#">Ίδρυμα Κοινωνικών Ασφαλίσεων</a>
     </div>
+    <div id="navbar" class="navbar-collapse collapse">
+      <ul class="nav navbar-nav navbar-right">
+        <li><a href="#">Περιεχόμενα</a></li>
+        <li><a href="#">Εγγραφή</a></li>
+        <li><a href="#">Σύνδεση</a></li>
+      </ul>
 
-    <div class="col-md-4">
-      <form class="form-inline top1" action="/action_page.php">
-        <div class="form-group" >
-          <input type="text" style="width:400px;" class="form-control">
+      <form class="navbar-form text-center" style="padding-top: 20px;" action="/action_page.php">
+        <div class="form-group">
+          <input type="text" class="form-control" style="width: 350px;" placeholder="Search" name="search">
         </div>
-        <button type="submit" class="btn btn-default">
-           <span class="glyphicon glyphicon-search"></span>
-        </button>
       </form>
-    </div>
-    <div class="col-md-3 text-center">
-    <ul class="nav navbar-nav navbar-right top">
-      <li><a href="#"><span class="glyphicon glyphicon-align-justify"></span> Περιεχόμενα</a></li>
-      <li><a href="#"><span class="glyphicon glyphicon-user"></span> Εγγραφή</a></li>
-      <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Σύνδεση</a></li>
-    </ul>
-    </div>
-    <div class="col-md-1"></div>
-  </nav>
 
-</div>
+    </div>
+    <!--/.nav-collapse -->
+  </div>
+  <!--/.container-fluid -->
+</nav>
   <!-- End Navbar -->
 
   <!-- Target Groups -->
