Horizontal line apps

--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#">Περιεχόμενα</a></li>
-        <li><a href="#">Εγγραφή</a></li>
-        <li><a href="#">Σύνδεση</a></li>
+        <li><a href="#"><span class="glyphicon glyphicon-align-justify"></span> Περιεχόμενα</a></li>
+        <li><a href="#"><span class="glyphicon glyphicon-user"></span> Εγγραφή</a></li>
+        <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Σύνδεση</a></li>
       </ul>
 
       <form class="navbar-form text-center" style="padding-top: 20px;" action="/action_page.php">
@@ -68,6 +68,14 @@
       <div class="col-md-2"></div>
     </div>
   <!-- End of Target Groups -->
+    <div class="container line">
+      <div class="horizontal-line">
+      <span style="font-size: 30px; background-color: #FFF; padding: 0 10px;">
+        Εφαρμογές <!--Padding is optional-->
+      </span>
+    </div>
+    <!-- Flexbox Grid -->
+  </div>
 </div>
 
 </body>
