--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav navbar-right">
         <li><a href="#"><span class="glyphicon glyphicon-align-justify"></span> Περιεχόμενα</a></li>
-        <li><a href="#"><span class="glyphicon glyphicon-user"></span> Εγγραφή</a></li>
+        <li><a href="#"><i class ="fas fa-user"></i> Εγγραφή</a></li>
         <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Σύνδεση</a></li>
       </ul>
 
       <form class="navbar-form text-center" style="padding-top: 20px;" action="/action_page.php">
         <div class="form-group">
-          <input type="text" class="form-control" style="width: 350px;" placeholder="Search" name="search">
+          <input type="text" class="form-control" style="width: 350px;" placeholder="Αναζήτηση" name="search">
         </div>
       </form>
 
@@ -78,17 +78,17 @@
     <!-- Flexbox Grid -->
     <div class="flex-body">
    		<div class="flex-column">
-    		<div  class="text-center" style="background: #6d7993;"><h3 id="content"><i class ="fas fa-lightbulb fa-4x"></i>Ενημερώσου για το ΑΜΚΑ</h3>
+    		<div  class="text-center" style="background: #6d7993;" onmouseover="this.style.backgroundColor='#006db9'" onmouseout="this.style.backgroundColor='#6d7993'"><h3><i class ="fas fa-lightbulb fa-3x" style="padding-top: 10px;"></i><br><br>Ενημερώσου για το ΑΜΚΑ</h3>
     		</div>
-    		<div class="text-center" style="background: #6d7993;"><h3 id="content">Λεξικό όρων</h3></div>
+    		<div class="text-center" style="background: #6d7993;" onmouseover="this.style.backgroundColor='#006db9'" onmouseout="this.style.backgroundColor='#6d7993'"><h3> <i class="fa fa-question-circle fa-3x" style="padding-top: 10px;"></i><br><br>Συχνές Ερωτήσεις</h3></div>
   		</div>
 
   		<div class="flex-column">
-    		<div class="text-center" style="background: #6d7993;"><h3 id="content">Συχνές Ερωτήσεις</h3></div>
-    		<div class="text-center" style="background: #6d7993;"><h3 id="content">Επικοινωνία</h3></div>
+    		<div class="text-center" style="background: #6d7993;" onmouseover="this.style.backgroundColor='#006db9'" onmouseout="this.style.backgroundColor='#6d7993'"><h3><i class="fa fa-home fa-3x" style="padding-top: 10px;"></i><br><br>Ασφαλίσου στο ΙΚΑ</h3></div>
+    		<div class="text-center" style="background: #6d7993;" onmouseover="this.style.backgroundColor='#006db9'" onmouseout="this.style.backgroundColor='#6d7993'"><h3><i class="fa fa-phone fa-3x" style="padding-top: 10px;" ></i><br><br>Επικοινωνία</h3></div>
   		</div>
   		<div class="flex-row">
-    		<div class="text-center" style="background: #6d7993;"><h3 id="content">Ασφαλίσου στο ΙΚΑ</h3></div>
+    		<div class="text-center" style="background: #6d7993;" onmouseover="this.style.backgroundColor='#006db9'" onmouseout="this.style.backgroundColor='#6d7993'"><h3><i class="fa fa-book fa-3x" style="padding-top: 150px;" ></i><br><br>Λεξικό όρων</h3></div>
   		</div>
 	</div>
   </div>
