--- a/index.html
+++ b/index.html
@@ -54,19 +54,19 @@
 
     <div class="row text-center target-groups">
       <div class="col-md-2"></div>
-      <div class="col-md-2">
+      <div class="col-md-2 mobile">
         <div type="button" class="btn btn-info target-group family"><h3>Ασφαλισμένοι</h3></div>
       </div>
-      <div class="col-md-2">
+      <div class="col-md-2 mobile">
         <div type="button" class="btn btn-info target-group retired"><h3>Συνταξιούχοι</h3></div>
       </div>
-      <div class="col-md-2">
+      <div class="col-md-2 mobile">
         <div type="button" class="btn btn-info target-group employer"><h3>Εργοδότες</h3></div>
       </div>
-      <div class="col-md-2">
+      <div class="col-md-2 mobile">
         <div type="button" class="btn btn-info target-group disability"><h3>A.M.E.A</h3></div>
       </div>
-      <div class="col-md-2"></div>
+      <div class="col-md-2 mobile"></div>
     </div>
   <!-- End of Target Groups -->
     <div class="container line">
@@ -78,17 +78,17 @@
     <!-- Flexbox Grid -->
     <div class="flex-body">
    		<div class="flex-column">
-    		<div  class="text-center" style="background: #6d7993;" onmouseover="this.style.backgroundColor='#006db9'" onmouseout="this.style.backgroundColor='#6d7993'"><h3><i class ="fas fa-lightbulb fa-3x" style="padding-top: 10px;"></i><br><br>Ενημερώσου για το ΑΜΚΑ</h3>
+    		<div  class="text-center grid-button" onmouseover="this.style.backgroundColor='#006db9'" onmouseout="this.style.backgroundColor='#6d7993'"><h3><i class ="fas fa-lightbulb fa-3x" style="padding-top: 10px;"></i><br><br>Ενημερώσου για το ΑΜΚΑ</h3>
     		</div>
-    		<div class="text-center" style="background: #6d7993;" onmouseover="this.style.backgroundColor='#006db9'" onmouseout="this.style.backgroundColor='#6d7993'"><h3> <i class="fa fa-question-circle fa-3x" style="padding-top: 10px;"></i><br><br>Συχνές Ερωτήσεις</h3></div>
+    		<div class="text-center grid-button" onmouseover="this.style.backgroundColor='#006db9'" onmouseout="this.style.backgroundColor='#6d7993'"><h3> <i class="fa fa-question-circle fa-3x" style="padding-top: 10px;"></i><br><br>Συχνές Ερωτήσεις</h3></div>
   		</div>
 
   		<div class="flex-column">
-    		<div class="text-center" style="background: #6d7993;" onmouseover="this.style.backgroundColor='#006db9'" onmouseout="this.style.backgroundColor='#6d7993'"><h3><i class="fa fa-home fa-3x" style="padding-top: 10px;"></i><br><br>Ασφαλίσου στο ΙΚΑ</h3></div>
-    		<div class="text-center" style="background: #6d7993;" onmouseover="this.style.backgroundColor='#006db9'" onmouseout="this.style.backgroundColor='#6d7993'"><h3><i class="fa fa-phone fa-3x" style="padding-top: 10px;" ></i><br><br>Επικοινωνία</h3></div>
+    		<div class="text-center grid-button" onmouseover="this.style.backgroundColor='#006db9'" onmouseout="this.style.backgroundColor='#6d7993'"><h3><i class="fa fa-home fa-3x" style="padding-top: 10px;"></i><br><br>Ασφαλίσου στο ΙΚΑ</h3></div>
+    		<div class="text-center grid-button" onmouseover="this.style.backgroundColor='#006db9'" onmouseout="this.style.backgroundColor='#6d7993'"><h3><i class="fa fa-phone fa-3x" style="padding-top: 10px;" ></i><br><br>Επικοινωνία</h3></div>
   		</div>
   		<div class="flex-row">
-    		<div class="text-center" style="background: #6d7993;" onmouseover="this.style.backgroundColor='#006db9'" onmouseout="this.style.backgroundColor='#6d7993'"><h3><i class="fa fa-book fa-3x" style="padding-top: 150px;" ></i><br><br>Λεξικό όρων</h3></div>
+    		<div class="text-center grid-button" onmouseover="this.style.backgroundColor='#006db9'" onmouseout="this.style.backgroundColor='#6d7993'"><h3><i class="fa fa-book fa-3x" style="padding-top: 150px;" ></i><br><br>Λεξικό όρων</h3></div>
   		</div>
 	</div>
   </div>
