--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
 
         </ul>
 
-        <ul class="nav navbar-nav navbar-right">
+        <ul class="nav navbar-nav navbar-right text-center">
           <li><a href="#"><i class ="fas fa-user"></i> Εγγραφή</a></li>
           <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Σύνδεση</a></li>
         </ul>
@@ -298,6 +298,39 @@
   		</div>
 	</div>
   </div>
+
+  <!-- Footer - Sitemap -->
+  <footer>
+    <div class="row">
+
+      <div class="col-sm-2">
+        <ul class="inner-list">
+            <li class="footer-header">Ασφαλισμένοι</li>
+            <li class="divider"></li>
+            <li class="section-title"><a href="#"><br>Συνταξιοδότηση</a></li>
+            <li class="footer-item"><a href="#">Υπολογισμός Ποσού Σύνταξης</a></li>
+            <li class="footer-item"><a href="#">Αίτηση Συνταξιοδότησης</a></li>
+        </ul>
+      </div>
+      <div class="col-sm-2">
+
+      </div>
+      <div class="col-sm-2">
+
+      </div>
+      <div class="col-sm-2">
+
+      </div>
+      <div class="col-sm-2">
+
+      </div>
+      <div class="col-sm-2">
+
+      </div>
+    </div>
+  </footer>
+
+  <!-- End of footer sitemap -->
 </div>
 
 </body>
