Changes to mega menu

--- a/index.html
+++ b/index.html
@@ -39,12 +39,12 @@
               <li class="col-sm-6 section">
                 <ul>
                   <li class="dropdown-header text-center"><a href="#">Ασφαλισμένοι</a></li>
-                  <li class="divider"></li>
+                  <li class="divider divider-header"></li>
                 </ul>
                 <ul class="row">
                     <li class="col-sm-4">
                       <ul class="inner-list text-center">
-                          <li class="text-center list-el"><a href="#"><br>Συνταξιοδότηση</a></li>
+                          <li class="text-center list-header"><a href="#"><br>Συνταξιοδότηση</a></li>
                           <li class="divider"></li>
                           <li class="list-el"><a href="#">Υπολογισμός Ποσού Σύνταξης</a></li>
                           <li class="list-el"><a href="#">Αίτηση Συνταξιοδότησης</a></li>
@@ -53,7 +53,7 @@
                     </li>
                     <li class="col-sm-4">
                       <ul class="inner-list text-center">
-                          <li class="text-center list-el"><a href="#">Δήλωση Έμμεσα <br> Ασφαλισμένου</a></li>
+                          <li class="text-center list-header"><a href="#">Δήλωση Έμμεσα <br> Ασφαλισμένου</a></li>
                           <li class="divider"></li>
                           <li class="list-el"><a href="#">Νέα Δήλωση</a></li>
                           <li class="list-el"><a href="#">Παρακολούθηση Αίτησης</a></li>
@@ -63,7 +63,7 @@
 
                     <li class="col-sm-4">
                       <ul class="inner-list text-center">
-                          <li class="text-center list-el"><a href="#">Ασφαλιστικές <br>Παροχές</a></li>
+                          <li class="text-center list-header"><a href="#">Ασφαλιστικές <br>Παροχές</a></li>
                           <li class="divider"></li>
                           <li class="list-el"><a href="#">Επιδόματα Διακοπών</a></li>
                           <li class="list-el"><a href="#">Άδεια Μητρότητας</a></li>
@@ -75,12 +75,12 @@
 
                  <ul>
                   <li class="dropdown-header text-center"><a href="#">Εργοδότες</a></li>
-                  <li class="divider"></li>
+                  <li class="divider divider-header"></li>
                 </ul>
                  <ul class="row">
                     <li class="col-sm-6">
                       <ul class="inner-list text-center">
-                          <li class="text-center list-el"><a href="#">Αναλυτική Περιοδική <br> Δήλωση</a></li>
+                          <li class="text-center list-header"><a href="#">Αναλυτική Περιοδική <br> Δήλωση</a></li>
                           <li class="divider"></li>
                           <li class="list-el"><a href="#">Υποβολή Δήλωσης</a></li>
                           <li class="list-el"><a href="#">Δικαιολογητικά</a></li>
@@ -89,7 +89,7 @@
                     </li>
                     <li class="col-sm-6">
                       <ul class="inner-list text-center">
-                          <li class="text-center list-el"><a href="#">Βεβαίωση Ασφαλιστικής <br>Ενημερότητας</a></li>
+                          <li class="text-center list-header"><a href="#">Βεβαίωση Ασφαλιστικής <br>Ενημερότητας</a></li>
                           <li class="divider"></li>
                           <li class="list-el"><a href="#">Λήψη Δήλωσης</a></li>
                           <li class="list-el"><a href="#">Δικαιολογητικά</a></li>
@@ -103,12 +103,12 @@
               <li class="col-sm-6 section">
                 <ul>
                   <li class="dropdown-header text-center"><a href="#">Συνταξιούχοι</a></li>
-                  <li class="divider"></li>
+                  <li class="divider divider-header"></li>
                 </ul>
                 <ul class="row">
                     <li class="col-sm-4">
                       <ul class="inner-list text-center">
-                          <li class="text-center list-el"><a href="#">Ενημέρωση Μηνιαίας <br> Σύνταξης</a></li>
+                          <li class="text-center list-header"><a href="#">Ενημέρωση Μηνιαίας <br> Σύνταξης</a></li>
                           <li class="divider"></li>
                           <li class="list-el"><a href="#">Υπολογισμός Ποσού Σύνταξης</a></li>
                       </ul>
@@ -116,7 +116,7 @@
                     </li>
                     <li class="col-sm-4">
                       <ul class="inner-list text-center">
-                          <li class="text-center list-el"><a href="#">Βεβαίωση Σύνταξης για Φορολογική Χρήση</a></li>
+                          <li class="text-center list-header"><a href="#">Βεβαίωση Σύνταξης για Φορολογική Χρήση</a></li>
                           <li class="divider"></li>
                           <li class="list-el"><a href="#">Βεβαίωση Σύνταξης</a></li>
                       </ul>
@@ -125,14 +125,13 @@
 
                     <li class="col-sm-4">
                       <ul class="inner-list text-center">
-                          <li class="text-center list-el"><a href="#">Πρόγραμμα Κατ'οίκον Φροντίδας</a></li>
+                          <li class="text-center list-header"><a href="#">Πρόγραμμα Κατ'οίκον <br> Φροντίδας</a></li>
                           <li class="divider"></li>
                           <li class="list-el"><a href="#">Αίτηση</a></li>
                           <li class="list-el"><a href="#">Δικαιολογητικά</a></li>
                           <li class="list-el"><a href="#">Παροχές Προγράμματος</a></li>
                       </ul>
                     </li>
-
                 </ul>
               </li>
 
@@ -140,12 +139,12 @@
               <li class="col-sm-6">
                 <ul>
                   <li class="dropdown-header text-center"><a href="#">A.M.E.A.</a></li>
-                  <li class="divider"></li>
+                  <li class="divider divider-header"></li>
                 </ul>
                 <ul class="row">
                     <li class="col-sm-6">
                       <ul class="inner-list text-center">
-                          <li class="text-center list-el"><a href="#">Αναπηρική <br> Σύνταξη</a></li>
+                          <li class="text-center list-header"><a href="#">Αναπηρική <br> Σύνταξη</a></li>
                           <li class="divider"></li>
                           <li class="list-el"><a href="#">Υπολογισμός Ποσού Σύνταξης</a></li>
                           <li class="list-el"><a href="#">Αίτηση Συνταξιοδότησης</a></li>
@@ -154,7 +153,7 @@
                     </li>
                     <li class="col-sm-6">
                       <ul class="inner-list text-center">
-                          <li class="text-center list-el"><a href="#">Πιστοποίηση Ποσοστού <br>Αναπηρίας</a></li>
+                          <li class="text-center list-header"><a href="#">Πιστοποίηση Ποσοστού <br>Αναπηρίας</a></li>
                           <li class="divider"></li>
                           <li class="list-el"><a href="#">Κέντρα Πιστοποίηση <br>Αναπηρίας (Κ.Ε.Π.Α.)</a></li>
                       </ul>
@@ -167,12 +166,12 @@
               <li class="col-sm-9 section">
                 <ul>
                   <li class="dropdown-header text-center"><a href="#">Συχνές Ερωτήσεις</a></li>
-                  <li class="divider"></li>
+                  <li class="divider divider-header"></li>
                 </ul>
                 <ul class="row">
                     <li class="col-sm-3">
                       <ul class="inner-list text-center">
-                          <li class="text-center list-el"><a href="#">Συνταξιοδότηση</a></li>
+                          <li class="text-center list-header"><a href="#">Συνταξιοδότηση</a></li>
                           <li class="divider"></li>
                           <li class="list-el"><a href="#">Δικαιούμαι Σύνταξη ;</a></li>
                           <li class="list-el"><a href="#">Λεξικό όρων</a></li>
@@ -181,7 +180,7 @@
                     </li>
                     <li class="col-sm-3">
                       <ul class="inner-list text-center">
-                          <li class="text-center list-el"><a href="#">Αναπηρία</a></li>
+                          <li class="text-center list-header"><a href="#">Αναπηρία</a></li>
                           <li class="divider"></li>
                           <li class="list-el"><a href="#">Δικαιούμαι σύνταξη ;</a></li>
                       </ul>
@@ -190,7 +189,7 @@
 
                     <li class="col-sm-3">
                       <ul class="inner-list text-center">
-                          <li class="text-center list-el"><a href="#">Ασφάλιση</a></li>
+                          <li class="text-center list-header"><a href="#">Ασφάλιση</a></li>
                           <li class="divider"></li>
                           <li class="list-el"><a href="#">Πως αποκτώ Αριθμό Μητρώου Ασφαλισμένου (Α.Μ.Α.) ;</a></li>
                           <li class="list-el"><a href="#">Είμαι αλλοδαπός: Μπορώ να ασφαλιστώ ;</a></li>
@@ -200,7 +199,7 @@
 
                     <li class="col-sm-3">
                       <ul class="inner-list text-center">
-                          <li class="text-center list-el"><a href="#">Επικοινωνία</a></li>
+                          <li class="text-center list-header"><a href="#">Επικοινωνία</a></li>
                           <li class="divider"></li>
                           <li class="list-el"><a href="#">Που βρίσκεται το κοντινότερο υποκατάστημα ;</a></li>
                       </ul>
@@ -213,7 +212,7 @@
               <li class="col-sm-3 section">
                 <ul>
                   <li class="dropdown-header text-center"><a href="#">Το ίδρυμα</a></li>
-                  <li class="divider"></li>
+                  <li class="divider divider-header"></li>
                 </ul>
                 <ul class="row">
                     <li class="col-sm-12">
@@ -242,11 +241,11 @@
           <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Σύνδεση</a></li>
         </ul>
 
-        <form class="navbar-form text-center" style="padding-top: 20px;" action="/action_page.php">
+        <form class="navbar-form text-center search-form" action="/action_page.php">
           <div class="form-group">
-            <input type="text" class="form-control" style="width: 350px;" placeholder="Αναζήτηση" name="search">
+            <input type="text" class="form-control search-box" placeholder="Αναζήτηση" name="search">
           </div>
-      </form>
+        </form>
 
       </div>
     <!--/.nav-collapse -->
@@ -283,17 +282,17 @@
     <!-- Flexbox Grid -->
     <div class="flex-body">
    		<div class="flex-column">
-    		<div  class="text-center" style="background: #6d7993;" onmouseover="this.style.backgroundColor='#006db9'" onmouseout="this.style.backgroundColor='#6d7993'"><h3><i class ="fas fa-lightbulb fa-3x" style="padding-top: 10px;"></i><br><br>Ενημερώσου για το ΑΜΚΑ</h3>
+    		<div  class="text-center" style="background: #6d7993; cursor: pointer;" onmouseover="this.style.backgroundColor='#006db9'" onmouseout="this.style.backgroundColor='#6d7993'"><h3><i class ="fas fa-lightbulb fa-3x" style="padding-top: 10px;"></i><br><br>Ενημερώσου για το ΑΜΚΑ</h3>
     		</div>
-    		<div class="text-center" style="background: #6d7993;" onmouseover="this.style.backgroundColor='#006db9'" onmouseout="this.style.backgroundColor='#6d7993'"><h3> <i class="fa fa-question-circle fa-3x" style="padding-top: 10px;"></i><br><br>Συχνές Ερωτήσεις</h3></div>
+    		<div class="text-center" style="background: #6d7993; cursor: pointer;" onmouseover="this.style.backgroundColor='#006db9'" onmouseout="this.style.backgroundColor='#6d7993'"><h3> <i class="fa fa-question-circle fa-3x" style="padding-top: 10px;"></i><br><br>Συχνές Ερωτήσεις</h3></div>
   		</div>
 
   		<div class="flex-column">
-    		<div class="text-center" style="background: #6d7993;" onmouseover="this.style.backgroundColor='#006db9'" onmouseout="this.style.backgroundColor='#6d7993'"><h3><i class="fa fa-home fa-3x" style="padding-top: 10px;"></i><br><br>Ασφαλίσου στο ΙΚΑ</h3></div>
-    		<div class="text-center" style="background: #6d7993;" onmouseover="this.style.backgroundColor='#006db9'" onmouseout="this.style.backgroundColor='#6d7993'"><h3><i class="fa fa-phone fa-3x" style="padding-top: 10px;" ></i><br><br>Επικοινωνία</h3></div>
+    		<div class="text-center" style="background: #6d7993; cursor: pointer;" onmouseover="this.style.backgroundColor='#006db9'" onmouseout="this.style.backgroundColor='#6d7993'"><h3><i class="fa fa-home fa-3x" style="padding-top: 10px;"></i><br><br>Ασφαλίσου στο ΙΚΑ</h3></div>
+    		<div class="text-center" style="background: #6d7993; cursor: pointer;" onmouseover="this.style.backgroundColor='#006db9'" onmouseout="this.style.backgroundColor='#6d7993'"><h3><i class="fa fa-phone fa-3x" style="padding-top: 10px;" ></i><br><br>Επικοινωνία</h3></div>
   		</div>
   		<div class="flex-row">
-    		<div class="text-center" style="background: #6d7993;" onmouseover="this.style.backgroundColor='#006db9'" onmouseout="this.style.backgroundColor='#6d7993'"><h3><i class="fa fa-book fa-3x" style="padding-top: 150px;" ></i><br><br>Λεξικό όρων</h3></div>
+    		<div class="text-center" style="background: #6d7993; cursor: pointer;" onmouseover="this.style.backgroundColor='#006db9'" onmouseout="this.style.backgroundColor='#6d7993'"><h3><i class="fa fa-book fa-3x" style="padding-top: 150px;" ></i><br><br>Λεξικό όρων</h3></div>
   		</div>
 	</div>
   </div>
